--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -11,23 +11,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Verify current directory
+        run: pwd && ls -al
 
-    - name: Run migrations
-      run: |
-        python manage.py migrate --noinput
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y python3-dev libffi-dev libssl-dev build-essential
 
-    - name: Run Django checks
-      run: |
-        python manage.py check
+      - name: Install Python dependencies
+        run: |
+          cd ${{ github.workspace }}
+          echo "Installing from: $(pwd)"
+          ls -al
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run migrations
+        run: python manage.py migrate --noinput
+
+      - name: Run Django checks
+        run: python manage.py check
