Add Django test step to CI workflow

--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -38,3 +38,6 @@ jobs:
 
       - name: Run Django checks
         run: python manage.py check
+      - name: Run Django tests
+        run: python manage.py test config.tests.test_basic
+
