Fix test path for GitHub Actions

--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -39,5 +39,9 @@ jobs:
       - name: Run Django checks
         run: python manage.py check
       - name: Run Django tests
-        run: python manage.py test config.tests.test_basic
+        run: |
+          cd ${{ github.workspace }}
+          echo "Current path: $(pwd)"
+          ls -al
+          python manage.py test config.tests.test_basic
 
