Set working directory correctly for Django tests

--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -43,5 +43,6 @@ jobs:
           cd ${{ github.workspace }}
           echo "Current path: $(pwd)"
           ls -al
-          python manage.py test config.tests.test_basic
+          python manage.py test
+        working-directory: ${{ github.workspace }}
 
