--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -19,17 +19,13 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Verify current directory
-        run: pwd && ls -al
-
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3-dev libffi-dev libssl-dev build-essential
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-dev libffi-dev libssl-dev build-essential
 
       - name: Install Python dependencies
         run: |
-          cd ${{ github.workspace }}
-          echo "Installing from: $(pwd)"
-          ls -al
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
@@ -38,11 +34,6 @@ jobs:
 
       - name: Run Django checks
         run: python manage.py check
-      - name: Run Django tests
-        run: |
-          cd ${{ github.workspace }}
-          echo "Current path: $(pwd)"
-          ls -al
-          python manage.py test
-        working-directory: ${{ github.workspace }}
 
+      - name: Run Django tests
+        run: python manage.py test
